# transcribeoffline

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
Linux/: CITATION.cff  README.md  main.py  models.py  setup_transcribe_offline_ubuntu.sh
Linux/content/licenses/: README.MD  README.md  Third-Party-Licenses.txt
R_win64/: README.md  models.py
Windows/: README (1).md  README.md  main.py  main2.py  setup_transcribe_offline.PS1  setup_transcribe_offline.R  setup_transcribe_offline.ps1
Windows/content/licenses/: LICENSE.txt  README.md  Third-Party-Licenses.txt
Windows/content/models/: README.MD
assets/demo/: Demo.edited.md  Demo.md
licenses/: ENGINE_THIRD_PARTY_LICENSES_FULL.md  THIRD_PARTY_NOTICES_ALL.md
macOS/: README.md  install.sh  main.py  requirements
macOS/content/: AppIcon.icns
macOS/content/licences/: LICENCE.txt  README.md  Third-Party-Licences.txt
macOS/content/models/: README
runtime-manifests/: engine-manifest-sources.json  engine-manifest.json
scripts/: regenerate-licenses.ps1  unblock-unsigned-runtime.ps1  unblock-unsigned-runtime.sh
src/: audio_assembler.rs  audio_capture_api.rs  audio_orchestrator.rs  bridge.rs  live.rs  main.rs  main_backend_tail.rs  runtime_installer.rs  settings.rs
