[package]
name = "transcribe-offline"
version = "2.0.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
directories = "6.0"
libloading = "0.8"
open = "5.3"
rfd = { version = "0.15", default-features = false, features = ["common-controls-v6", "xdg-portal", "async-std"] }
eframe = { version = "0.33.3", default-features = true }
regex = "1.12"
strsim = "0.11"
cpal = "0.15"
symphonia = { version = "0.5", features = ["all"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
flate2 = "1.0"
tar = "0.4"
zip = { version = "2.2", default-features = true }
ico = "0.4"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
